Some minor fixes: - Fix timing attack vulnerability in API key validation using constant-time   comparison (subtle crate) to prevent key extraction via response timing - Fix potential DoS in bandwidth test by streaming response in 64KB chunks   instead of allocating entire response in memory - Add missing API key authentication to /api/v1/configs endpoint - Fix integer overflow risks in timestamp calculations using saturating   arithmetic in scheduler, agent database, server database, and health monitor

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -40,6 +40,8 @@ tikv-jemallocator.workspace = true
 axum.workspace = true
 tower.workspace = true
 clap.workspace = true
+subtle.workspace = true
+futures-util.workspace = true
 
 [dev-dependencies]
 tempfile.workspace = true
