--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ rsql_driver = "0.19.2"
 
 anyhow = "1.0.100"
 thiserror = "2.0.17"
+subtle = "2.6"
 tempfile = "3.23.0"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
@@ -50,7 +51,7 @@ rand = "0.9.2"
 futures-util = "0.3.30"
 
 [workspace.package]
-version = "0.7.6"
+version = "0.7.7"
 edition = "2021"
 license = "MIT License"
 authors = ["Maciej Wilamowski - Sycope"]
